<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">home</string>
    <string name="action_settings">Settings</string>
    <string name="default_1">张三</string>
    <string name="default_2">Test2</string>
    <string name="default_3">Test3</string>
    <string name="lipsum">
        为了向您提供更优质的服务，我公司将在2016年10月8日22时至2016年10月10日06时进行系统升级。升级期间全省各商户下所有订单业务将会无法查询，APP客户端无法正常登录使用等，带来不便之处深表歉意，请您谅解。
    </string>
    <string-array name="home_tabs">
        <item>首页</item>
        <item>付账</item>
        <item>查账</item>
        <item>退账</item>
    </string-array>
    <string name="net_connect">网络连接正常</string>
    <string name="net_disconnect">网络连接异常</string>
    <string name="request_too_long">网络请求超时，请稍后重试！</string>
    <string name="exit">是否退出“翼惠支付”客户端？</string>
    <string name="dexit">是否退出“多友财”客户端？</string>
    <string name="btn_login">登录</string>
    <string name="hint_user">用户名</string>
    <string name="hint_password">密码:</string>
    <string name="tab_merchant">服务商/商户</string>
    <string name="tab_staff">员工</string>
    <string name="login_waiting">正在登录…</string>
    <string name="alert_title">提示</string>
    <string name="alert_message">没有输入用户名或密码！</string>
    <string name="alert_login_error">用户名或密码输入有误！</string>
    <string name="alert_login_time_long">网络连接超时！请稍后重新尝试。</string>
    <string name="alert_positive">确定</string>
    <string name="alert_native">取消</string>
    <string name="title">云网科技有限公司</string>
    <string name="hint_time">请选择时间</string>
    <string-array name="staff_main_function_list">
        <item>智能扫码</item>
        <item>二维码</item>
        <item>订单查询</item>
    </string-array>
    <string-array name="staff_sub_function_list">
        <item>微信订单</item>
        <item>支付宝订单</item>
        <item>退款</item>
        <item>退款查询</item>
        
        <item>支付二维码</item>
        <item>费率订单</item>
        <item>订单详情</item>
    </string-array>
    <string-array name="merchant_main_function_list">
        <item>订单查询</item>
        <item>商户查询</item>
    </string-array>
    <string-array name="merchant_sub_function_list">
        <item>上级费率订单</item>
        <item>费率订单</item>
    </string-array>
    <string-array name="service_rec_menu">
        <item>员工列表</item>
        <item>员工订单汇总</item>
        <item>商户查询</item>
        <item>商户权限分配</item>
        <item>员工权限分配</item>
        
        <item>退款查询</item>
        
    </string-array>
    <string-array name="merchant_rec_menu">
        <item>员工列表</item>
        <item>订单查询</item>
        <item>员工二维码</item>
        <item>员工权限分配</item>
        <item>费率订单</item>
        
        <item>退款查询</item>
        <item>订单详情</item>
        <item>日交易汇总</item>
        <item>商户-退款</item>
    </string-array>
    <string name="orders_list_title">订单查询</string>
    <string name="orders_search_title">订单查询</string>
    <string name="orders_search_order_code">订单号</string>
    <string name="orders_search_start_time">订单开始时间</string>
    <string name="orders_search_end_time">订单结束时间</string>
    <string name="orders_search_start_time_refund">退款开始时间</string>
    <string name="orders_search_end_time_refund">退款结束时间</string>
    <string name="orders_search_customer">商户用户名</string>
    <string name="orders_search_customer_name">商户名称</string>
    <string name="orders_search_pay_type">交易类型</string>
    <string name="orders_search_waitting">正在加载数据，请稍后…</string>
    <string name="orders_search_btn_settlement">汇总</string>
    <string name="staff_collect_list_title">服务商员工订单汇总</string>
    <string name="staff_collect_search_title">订单查询</string>
    <string name="staff_collect_search_order_code">订单号</string>
    <string name="staff_collect_search_start_time">开始时间</string>
    <string name="staff_collect_search_end_time">结束时间</string>
    <string name="staff_collect_search_customer">员工登录名</string>
    <string name="staff_collect_search_customer_name">真实姓名</string>
    <string name="staff_collect_search_pay_type">交易类型</string>
    <string name="staff_collect_search_phone">电话</string>
    <string name="staff_collect_search_btn_settlement">汇总</string>
    <string name="settlement_list_title">汇总</string>
    <string name="settlement_title">汇总详情</string>
    <string name="settlement_name">员工名称</string>
    <string name="settlement_money">交易金额</string>
    <string name="settlement_cash">实际交易金额</string>
    <string name="settlement_cny">交易币种</string>
    <string name="settlement_count">交易笔数</string>
    <string name="settlement_hint">无数据</string>
    <string name="staffcollect_list_title">汇总</string>
    <string name="staffcollect_title">汇总详情</string>
    <string name="staffcollect_name">员工登录名</string>
    <string name="staffcollect_money">真实姓名</string>
    <string name="staffcollect_cash">电话</string>
    <string name="staffcollect_cny">交易金额</string>
    <string name="staffcollect_count">退款金额</string>
    <string name="staffcollect_count1">实际金额</string>
    <string name="staffcollect_hint">无数据</string>
    <string name="type_weixin">微信</string>
    <string name="type_zhifubo">支付宝</string>
    <string name="type_xingye_weixin">兴业-微信</string>
    <string name="type_wingye_zfb">兴业-支付宝</string>
    <string name="type_pufa_wx">浦发-微信</string>
    <string name="type_pufa_zfb">浦发-支付宝</string>
    <string name="orders_search_info_title">订单详情</string>
    <string name="orders_search_info_id">序&#12288;&#12288;号</string>
    <string name="orders_search_info_customer">商户名称</string>
    <string name="orders_search_info_code">订&#8194;单&#8194;号</string>
    <string name="orders_search_info_user">登&#8194;录&#8194;名</string>
    <string name="orders_search_info_user_name">真实姓名</string>
    <string name="orders_search_info_pay_type">交易类型</string>
    <string name="orders_search_info_money">交易金额</string>
    <string name="orders_search_info_money_cash">折后金额</string>
    <string name="orders_search_info_money_type">交易币种</string>
    <string name="orders_search_info_star_time">交易时间</string>
    <string name="orders_search_merch_rate">商户费率</string>
    <string name="orders_search_rate">费&#12288;&#12288;率</string>
    <string name="orders_search_rate_fee">返&#12288;&#12288;佣</string>
    <string name="wx_orders_search_title">微信订单查询</string>
    <string name="single_orders_search_order_code">订单号</string>
    <string name="single_btn_orders_search">查询</string>
    <string name="wx_error_result">请求失败,请返回重试.</string>
    <string name="wx_error_code">查无此数据，请检查订单号！</string>
    <string name="wx_null_code">请至少填写一项订单号</string>
    <string name="single_order_code">订单号</string>
    <string name="single_order_pay_type">交易类型</string>
    <string name="single_order_money">交易金额</string>
    <string name="single_order_cny">交易币种</string>
    <string name="single_order_time">交易时间</string>
    <string name="single_order_status">交易状态</string>
    <string name="zfb_orders_search_title">支付宝订单查询</string>
    <string name="zfb_orders_search_order_code">订单号</string>
    <string name="zfb_btn_orders_search">查询</string>
    <string name="zfb_btn_orders_supplement">补单</string>
    <string name="zfb_error_result">请求失败,请返回重试.</string>
    <string name="zfb_error_code">查无此数据，请检查订单号！</string>
    <string name="zfb_null_code">请填写订单号</string>
    <string name="refund_search_start_time">订单开始时间</string>
    <string name="refund_search_end_time">订单结束时间</string>
    <string name="refund_search_refund_start_time">退款开始时间</string>
    <string name="refund_search_refund_end_time">退款结束时间</string>
    <string name="refund_search_title">退款查询</string>
    <string name="refund_search_code">订单号</string>
    <string name="btn_refund_search">查询</string>
    <string name="refund_info_sos_no">序&#12288;&#12288;号</string>
    <string name="refund_info_code">订&#8194;单&#8194;号</string>
    <string name="refund_info_pay_type">交易类型</string>
    <string name="refund_info_money">交易金额</string>
    <string name="refund_info_cny">交易币种</string>
    <string name="refund_info_order_time">交易时间</string>
    <string name="refund_info_refund_time">退款时间</string>
    <string name="refund_info_refund">退款金额</string>
    <string name="refund_info_status">状&#12288;&#12288;态</string>
    <string name="refund_search_info_title">退款详情</string>
    <string name="unrefund_search_start_time">交易开始时间</string>
    <string name="unrefund_search_end_time">交易结束时间</string>
    <string name="unrefund_search_code">订单号</string>
    <string name="unrefund_search_title">退款</string>
    <string name="unrefund_info_sys_no">序&#12288;&#12288;号</string>
    <string name="unrefund_info_code">订&#8194;单&#8194;号</string>
    <string name="unrefund_info_pay_type">交易类型</string>
    <string name="unrefund_info_money_type">交易币种</string>
    <string name="unrefund_info_order_time">交易时间</string>
    <string name="unrefund_info_money">订单金额</string>
    <string name="unrefund_info_refund">已退金额</string>
    <string name="unrefund_info_cash">可退金额</string>
    <string name="unrefund_info_refund_count">退款笔数</string>
    <string name="unrefund_info_status">退款操作</string>
    <string name="unrefund_info_controller">退款</string>
    <string name="unrefund_status">退款</string>
    <string name="refunded_status">退款完成</string>
    <string name="unrefund_step">部分退款</string>
    <string name="unrefund_error">不可退款</string>
    <string name="unrefund_controller_title">退款详情</string>
    <string name="unrefund_controller_code">订&#8194;单&#8194;号</string>
    <string name="unrefund_controller_refund">退款金额</string>
    <string name="unrefund_controller_password">密&#12288;&#12288;码</string>
    <string name="unrefund_btn_refund">确认退款</string>
    <string name="unrefund_hint">输入金额</string>
    <string name="unrefund_password_hint">输入密码</string>
    <string name="unrefund_info_title">退款详情</string>
    <string name="update_rate_tittle">修改上级费率</string>
    <string name="update_rate_hint">输入费率</string>
    <string name="update_rate_rate">费&#12288;&#12288;率</string>
    <string name="update_rate_comfirm">确&#12288;&#12288;定</string>
    <string name="qr_title">二维码支付</string>
    <string name="qr_edit_hint">输入金额</string>
    <string name="qr_success">支付成功</string>
    <string name="qr_error">&#12288;&#12288;支付失败\n请重新生成二维码</string>
    <string name="shop_user">商户用户名</string>
    <string name="hint_shop_user">请输入商户用户名</string>
    <string name="shop_name">商户名称</string>
    <string name="hint_shop_name">请输入商户名称</string>
    <string name="shop_search_title">商户查询</string>
    <string name="shop_search_btn">查询</string>
    <string name="shop_id">商&#8194;户&#8194;号</string>
    <string name="shop_info_user">商户用户</string>
    <string name="shop_info_name">商户名称</string>
    <string name="shop_info_tel">联系电话</string>
    <string name="shop_info_type">商户类型</string>
    <string name="shop_info_time">注册时间</string>
    <string name="shop_info_control">操&#12288;&#12288;作</string>
    <string name="shop_info_email">电子邮箱</string>
    <string name="shop_info_fax">传&#12288;&#12288;真</string>
    <string name="shop_info_address">联系地址</string>
    <string name="shop_info_top">上级员工</string>
    <string name="shop_info_btn_control">查看订单</string>
    <string name="shop_info_btn_control1">调拨</string>
    <string name="shop_info_title">商户详情</string>
    <string name="staff_search_customer">登录名</string>
    <string name="staff_search_tel">电&#12288;话</string>
    <string name="staff_search_btn_search">查询</string>
    <string name="staff_search_title">员工查询</string>
    <string name="mine_title">我的</string>
    <string name="mine_password">修改密码</string>
    <string name="mine_info">账户信息</string>
    <string name="mine_logout">退出账户</string>
    <string name="regist_info_province">&#8194;&#8194;省&#8194;&#8194;</string>
    <string name="regist_info_city">&#8194;&#8194;市&#8194;&#8194;</string>
    <string name="regist_info_area">&#8194;&#8194;区&#8194;&#8194;</string>
    <string name="remember_pwd">记住密码</string>
    <string name="change_yh">“改变生活 只可翼惠”</string>
    <string name="yh_cop">由长春市翼惠网络技术有限公司提供服务</string>
    <string name="comfirm">确定</string>
</resources>