<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_back_color">

    <RelativeLayout
        android:id="@+id/rel_mine_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/black_color">

        <TextView
            android:id="@+id/text_shop_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mine_title"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_size_20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_mine_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_mine_header"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/white_color">

        <RelativeLayout
            android:id="@+id/rel_mine_item_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/mine_password"
                android:textColor="@color/black_color"
                android:textSize="@dimen/text_size_20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_10dp"
                android:src="@drawable/arrow" />
        </RelativeLayout>

        <View
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/rel_mine_item_1"
            android:background="@color/divide_gray_color" />

        <RelativeLayout
            android:id="@+id/rel_mine_item_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/mine_info"
                android:textColor="@color/black_color"
                android:textSize="@dimen/text_size_20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_10dp"
                android:src="@drawable/arrow" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/material_button_red"
        android:text="@string/mine_logout"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_size_16sp" />

    <Button
        android:id="@+id/button_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_logout"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:background="@drawable/material_button_red"
        android:text="测   试"
        android:textColor="@color/white"
        android:visibility="gone" />
</RelativeLayout>