<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rel_login_logo_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_color">

                <ImageView
                    android:id="@+id/imageView_logo"
                    android:layout_width="150dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="47dp"
                    android:layout_marginBottom="40dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/login_logo" />
            </RelativeLayout>


            <!--<android.support.design.widget.TabLayout-->
            <!--android:id="@+id/tab_login"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/rel_login_logo_back"-->
            <!--app:tabBackground="@color/blue_color"-->
            <!--app:tabGravity="fill"-->
            <!--app:tabIndicatorColor="@null"-->
            <!--app:tabMode="fixed"-->
            <!--app:tabPaddingEnd="0dp"-->
            <!--app:tabPaddingStart="0dp"-->
            <!--app:tabSelectedTextColor="@color/black_color"-->
            <!--app:tabTextColor="@color/white_color" />-->

            <com.yang.yunwang.base.ui.SlidingTabLayout
                android:id="@+id/tab_login"
                android:layout_centerHorizontal="true"
                android:background="@color/white_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/margin_5dp"
                android:layout_below="@+id/rel_login_logo_back"
                android:paddingBottom="@dimen/margin_5dp"
                android:scrollbars="none"></com.yang.yunwang.base.ui.SlidingTabLayout>


            <com.yang.yunwang.base.ui.WrapContentHeightViewPager
                android:id="@+id/viewpager_login"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/margin_10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tab_login" />

            <LinearLayout
                android:id="@+id/ll_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/viewpager_login"
                android:orientation="vertical"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/cb_remember_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/margin_20dp"
                    android:layout_marginBottom="@dimen/margin_5dp"
                    android:text="@string/remember_pwd"
                    android:textColor="@color/grey_error" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:layout_marginLeft="@dimen/margin_15dp"
                    android:layout_marginRight="@dimen/margin_15dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@drawable/material_button_round"
                    android:text="@string/comfirm"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/text_size_16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_btn"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="45dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/margin_100dp"
                    android:layout_height="37dp"
                    android:src="@drawable/login_buttom_icon" />

                <TextView
                    android:id="@+id/text_change_y"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/change_yh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/yh_cop" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>