<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/regist_info_province"
            android:textColor="@color/label_color"
            android:textSize="@dimen/text_size_20sp" />

        <Spinner
            android:id="@+id/spinner_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_toEndOf="@+id/textView1" />

    </RelativeLayout>

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/divide_gray_color" />

    <RelativeLayout
        android:id="@+id/rl_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/regist_info_city"
            android:textColor="@color/label_color"
            android:textSize="@dimen/text_size_20sp" />

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_toEndOf="@+id/textView2" />

    </RelativeLayout>

    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/divide_gray_color" />

    <RelativeLayout
        android:id="@+id/rl_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/regist_info_area"
            android:textColor="@color/label_color"
            android:textSize="@dimen/text_size_20sp" />

        <Spinner
            android:id="@+id/spinner_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_toEndOf="@+id/textView3" />

    </RelativeLayout>
</LinearLayout>